--- a/Stock-Services/src/main/resources/application.properties
+++ b/Stock-Services/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-spring.redis.host=localhost
-spring.redis.port=6379
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_stock
 spring.datasource.username=postgres
