--- a/Bank-Services/src/main/resources/application.properties
+++ b/Bank-Services/src/main/resources/application.properties
@@ -7,6 +7,9 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
